# go-pion-webrtc-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  go.mod  main.go
.github/workflows/: test.yml
src/: data_chan.rs  evt.rs  go_buf.rs  lib.rs  peer_con.rs
sys/: Cargo.toml  README.md  buffer.go  build.rs  const.go  datachannel.go  main.go  peerconnection.go
sys/src/: constants.rs  lib.rs
